add module shop

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,9 @@
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.css" />
+    <link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
+    <link rel="stylesheet" href="bower_components/am-wb-common/dist/am-wb-common.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.css" />
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -149,6 +152,11 @@
     <script src="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.js"></script>
     <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
     <script src="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.js"></script>
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
+    <script src="bower_components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
+    <script src="bower_components/am-wb-common/dist/am-wb-common.js"></script>
+    <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
+    <script src="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
