Add dependency to the angular-material-dashboard-account. remove extra codes

--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="bower_components/nvd3/build/nv.d3.css" />
     <link rel="stylesheet" href="bower_components/am-wb-seen-monitors/dist/am-wb-seen-monitors.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard/dist/angular-material-dashboard.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.css" />
@@ -144,6 +145,7 @@
     <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
     <script src="bower_components/am-wb-seen-monitors/dist/am-wb-seen-monitors.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
+    <script src="bower_components/angular-material-dashboard-account/dist/angular-material-dashboard-account.js"></script>
     <script src="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.js"></script>
     <script src="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.js"></script>
     <script src="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.js"></script>
@@ -163,7 +165,6 @@
     <!-- injector:js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/configs/icon.js"></script>
-    <script src="scripts/runs/navigator.js"></script>
     <!-- endinjector -->
     <!-- endbuild -->
 </body>
