--- a/app/index.html
+++ b/app/index.html
@@ -123,6 +123,7 @@
     <script src="bower_components/jspanel4x/dist/jspanel.js"></script>
     <script src="bower_components/tinymce/tinymce.js"></script>
     <script src="bower_components/object-path/index.js"></script>
+    <script src="bower_components/flux/dist/Flux.js"></script>
     <script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
     <script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
     <script src="bower_components/angular-uuid/uuid.min.js"></script>
