Adding wallet to the mydashboard.

--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,6 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
-    <link rel="stylesheet" href="bower_components/angular-material-icons/angular-material-icons.css" />
     <link rel="stylesheet" href="bower_components/pikaday/css/pikaday.css" />
     <link rel="stylesheet" href="bower_components/handsontable/dist/handsontable.css" />
     <link rel="stylesheet" href="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.css" />
@@ -42,6 +41,7 @@
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.css" />
     <link rel="stylesheet" href="bower_components/am-wb-common/dist/am-wb-common.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.css" />
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -109,7 +109,6 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
     <script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
     <script src="bower_components/numbro/numbro.js"></script>
     <script src="bower_components/pikaday/pikaday.js"></script>
@@ -153,6 +152,7 @@
     <script src="bower_components/am-wb-common/dist/am-wb-common.js"></script>
     <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
     <script src="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.js"></script>
+    <script src="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
