--- a/app/index.html
+++ b/app/index.html
@@ -64,27 +64,7 @@
         <a href="http://browsehappy.com/">upgrade your browser</a>
         to improve your experience.</p>
     <![endif]-->
-    <mb-panel>
-        <div
-            class="wb-preloader"
-            ng-hide="app.state != 'loadign'">
-            Loading....
-        </div>
-    </mb-panel>
-    <!-- Uncomment to enable google analytic -->
-    <script>
-          (function (i, s, o, g, r, a, m) {
-              i['GoogleAnalyticsObject'] = r;
-              i[r] = i[r] || function () {
-                  (i[r].q = i[r].q || []).push(arguments);
-              }, i[r].l = 1 * new Date();
-              a = s.createElement(o),
-                      m = s.getElementsByTagName(o)[0];
-              a.async = 1;
-              a.src = g;
-              m.parentNode.insertBefore(a, m)
-          })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    </script>
+    <mb-panel></mb-panel>
 
 
     <!-- build:js(.) scripts/vendor.js -->
