--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!-- manifest="manifest.appcache" -->
 <html
-	ng-app="siteoncloudsDashboardApp"
+	ng-app="myDashboardApp"
 	manifest="<!-- injector:base-path --><!-- endinjector -->manifest.appcache">
   <head>
     <meta charset="utf-8">
