changes due to building app

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="bower_components/am-wb-common/dist/am-wb-common.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.css" />
     <link rel="stylesheet" href="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-dashboard-sdp/dist/angular-material-dashboard-sdp.css" />
     <!-- endbower -->
     <!-- endbuild -->
     
@@ -130,6 +131,7 @@
     <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
     <script src="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.js"></script>
     <script src="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.js"></script>
+    <script src="bower_components/angular-material-dashboard-sdp/dist/angular-material-dashboard-sdp.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
