--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <!-- manifest="manifest.appcache" -->
 <html
@@ -56,7 +57,7 @@
 	md-theme="{{app.setting.theme || 'default'}}" 
 	md-theme-watch
 	ng-class="{'mb-rtl-direction': app.dir=='rtl', 'mb-ltr-direction': app.dir!='rtl'}"
-	dir="{{app.dir}}">
+	dir="{{app.dir}}">{{__app.configs.dir}}
 	<!--[if lt IE 10]>
       <p>You are using an <strong>outdated</strong> browser. Please
         <a href="http://browsehappy.com/">upgrade your browser</a>
