--- a/app/index.html
+++ b/app/index.html
@@ -1,28 +1,24 @@
-
 <!doctype html>
-<!-- manifest="manifest.appcache" -->
-<html
-	ng-app="myDashboardApp"
-	manifest="<!-- injector:base-path --><!-- endinjector -->manifest.appcache">
-	<head>
+<html ng-app="myDashboardApp" 
+      ng-controller="MainCtrl"
+      manifest="<!-- injector:base-path --><!-- endinjector -->manifest.appcache">
+<head>
+	<title>Angular Material Dashboard</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--  Tells to crawler that do not index this page and do not follow its links -->
-	<meta name="robots" content="noindex, nofollow" />
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	
-	<!--  injector:base-tag -->
-	<base href="/" >
+	<meta name="description" content="Angular admin dashboard with material design">
+	<meta name="author" content="flatlogic.com">
+	<meta name="viewport" content="width=device-width">
+	<meta name="robots" content="noindex, nofollow">
+
+	<!--  injector:base -->
+	<base href="/">
 	<!--  endinjector  -->
-	
-	<!-- build:css(.) styles/vendor.css -->
+
+	<!-- build:css({.tmp/serve,src}) styles/vendor.css -->
 	<!-- bower:css -->
-	<link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
-	<link rel="stylesheet" href="bower_components/pikaday/css/pikaday.css" />
-	<link rel="stylesheet" href="bower_components/handsontable/dist/handsontable.css" />
-	<link rel="stylesheet" href="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.css" />
-	<link rel="stylesheet" href="bower_components/md-color-picker/dist/md-color-picker.css" />
 	<link rel="stylesheet" href="bower_components/jspanel4x/dist/jspanel.css" />
+	<link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+	<link rel="stylesheet" href="bower_components/md-color-picker/dist/md-color-picker.css" />
 	<link rel="stylesheet" href="bower_components/am-wb-core/dist/am-wb-core.css" />
 	<link rel="stylesheet" href="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.css" />
 	<link rel="stylesheet" href="bower_components/am-wb-seen-core/dist/am-wb-seen-core.css" />
@@ -37,14 +33,13 @@
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.css" />
-	<link rel="stylesheet" href="bower_components/am-wb-common/dist/am-wb-common.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-sdp/dist/angular-material-dashboard-sdp.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
 	
-	<!-- build:css(.tmp) styles/main.css -->
+	<!-- build:css({.tmp/serve,src}) styles/app.css -->
 	<!-- injector:css -->
 	<link rel="stylesheet" href="styles/fonts.css">
 	<link rel="stylesheet" href="styles/main.css">
@@ -52,21 +47,8 @@
 	<link rel="stylesheet" href="styles/test-preloader.css">
 	<!-- endinjector -->
 	<!-- endbuild -->
-	</head>
-	<body
-	md-theme="{{app.setting.theme || 'default'}}" 
-	md-theme-watch
-	ng-class="{'mb-rtl-direction': __app.configs.dir=='rtl', 'mb-ltr-direction': __app.configs.dir!='rtl'}"
-	dir="{{__app.configs.dir}}">
-	<!--[if lt IE 10]>
-	  <p>You are using an <strong>outdated</strong> browser. Please
-		<a href="http://browsehappy.com/">upgrade your browser</a>
-		to improve your experience.</p>
-	<![endif]-->
-	<mb-panel></mb-panel>
 
-
-	<!-- build:js(.) scripts/vendor.js -->
+	<!-- build:js(src) scripts/vendor.js -->
 	<!-- bower:js -->
 	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
@@ -77,32 +59,26 @@
 	<script src="bower_components/seen-core/dist/seen-core.js"></script>
 	<script src="bower_components/seen-user/dist/seen-user.js"></script>
 	<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+	<script src="bower_components/angular-route/angular-route.js"></script>
 	<script src="bower_components/seen-bank/dist/seen-bank.js"></script>
 	<script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
 	<script src="bower_components/seen-cms/dist/seen-cms.js"></script>
 	<script src="bower_components/seen-monitor/dist/seen-monitor.js"></script>
+	<script src="bower_components/flux/dist/Flux.js"></script>
+	<script src="bower_components/object-path/index.js"></script>
+	<script src="bower_components/jspanel4x/dist/jspanel.js"></script>
+	<script src="bower_components/tinymce/tinymce.js"></script>
+	<script src="bower_components/tinycolor/tinycolor.js"></script>
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
 	<script src="bower_components/angular-aria/angular-aria.js"></script>
 	<script src="bower_components/angular-messages/angular-messages.js"></script>
-	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<script src="bower_components/angular-material/angular-material.js"></script>
-	<script src="bower_components/angular-translate/angular-translate.js"></script>
-	<script src="bower_components/angular-route/angular-route.js"></script>
-	<script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
-	<script src="bower_components/numbro/numbro.js"></script>
-	<script src="bower_components/pikaday/pikaday.js"></script>
-	<script src="bower_components/zeroclipboard/dist/ZeroClipboard.js"></script>
-	<script src="bower_components/handsontable/dist/handsontable.js"></script>
-	<script src="bower_components/ngHandsontable/dist/ngHandsontable.js"></script>
-	<script src="bower_components/angular-material-expansion-panel/dist/md-expansion-panel.js"></script>
-	<script src="bower_components/tinycolor/tinycolor.js"></script>
 	<script src="bower_components/md-color-picker/dist/md-color-picker.js"></script>
-	<script src="bower_components/angular-drag-and-drop-lists/angular-drag-and-drop-lists.js"></script>
-	<script src="bower_components/jspanel4x/dist/jspanel.js"></script>
-	<script src="bower_components/tinymce/tinymce.js"></script>
-	<script src="bower_components/object-path/index.js"></script>
-	<script src="bower_components/flux/dist/Flux.js"></script>
+	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+	<script src="bower_components/angular-translate/angular-translate.js"></script>
+	<script src="bower_components/weakmap-polyfill/weakmap-polyfill.js"></script>
 	<script src="bower_components/ngstorage/ngStorage.js"></script>
+	<script src="bower_components/loglevel/dist/loglevel.min.js"></script>
 	<script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
 	<script src="bower_components/lf-ng-md-file-input/dist/lf-ng-md-file-input.js"></script>
 	<script src="bower_components/angular-uuid/uuid.min.js"></script>
@@ -114,7 +90,6 @@
 	<script src="bower_components/file-saver.js/FileSaver.js"></script>
 	<script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
 	<script src="bower_components/angular-material-persian-datepicker/dist/datePicker.min.js"></script>
-	<script src="bower_components/machina/lib/machina.js"></script>
 	<script src="bower_components/mblowfish-core/dist/mblowfish-core.js"></script>
 	<script src="bower_components/mblowfish-language/dist/mblowfish-language.js"></script>
 	<script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
@@ -127,9 +102,6 @@
 	<script src="bower_components/angular-material-dashboard-user/dist/angular-material-dashboard-user.js"></script>
 	<script src="bower_components/seen-seo/dist/seen-seo.js"></script>
 	<script src="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.js"></script>
-	<script src="bower_components/angular-youtube-mb/src/angular-youtube-embed.js"></script>
-	<script src="bower_components/d3/d3.js"></script>
-	<script src="bower_components/am-wb-common/dist/am-wb-common.js"></script>
 	<script src="bower_components/seen-shop/dist/seen-shop.js"></script>
 	<script src="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.js"></script>
 	<script src="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.js"></script>
@@ -144,5 +116,14 @@
 	<script src="scripts/configs/icon.js"></script>
 	<!-- endinjector -->
 	<!-- endbuild -->
+</head>
+<body 
+	md-theme="{{app.test.theme || app.setting.theme || app.config.theme || 'default'}}"
+	md-theme-watch
+	ng-class="{'mb-rtl-direction': app.dir=='rtl', 'mb-ltr-direction': app.dir!='rtl'}"
+	dir="{{app.dir}}"
+	layout="column"
+	mb-view
+	style="height: 100vh; width: 100vw;">
 </body>
 </html>
