--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
 	<meta name="viewport" content="width=device-width">
 	<meta name="robots" content="noindex, nofollow">
 
-	<!--  injector:base -->
-	<base href="/">
+	<!--  injector:base-tag -->
+	<base href="/" >
 	<!--  endinjector  -->
 
 	<!-- build:css(.) styles/vendor.css -->
