--- a/app/index.html
+++ b/app/index.html
@@ -30,10 +30,8 @@
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.css" />
-	<link rel="stylesheet" href="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.css" />
-	<link rel="stylesheet" href="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-sdp/dist/angular-material-dashboard-sdp.css" />
 	<!-- endbower -->
 	<!-- endbuild -->
@@ -51,6 +49,15 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/mustache.js/mustache.js"></script>
+    <script src="bower_components/seen-core/dist/seen-core.js"></script>
+    <script src="bower_components/seen-bank/dist/seen-bank.js"></script>
+    <script src="bower_components/seen-supertenant/dist/seen-supertenant.js"></script>
+    <script src="bower_components/seen-user/dist/seen-user.js"></script>
+    <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
+    <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
+    <script src="bower_components/seen-sdp/dist/seen-sdp.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -58,11 +65,6 @@
     <script src="bower_components/angular-messages/angular-messages.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
-    <script src="bower_components/mustache.js/mustache.js"></script>
-    <script src="bower_components/seen-core/dist/seen-core.js"></script>
-    <script src="bower_components/seen-user/dist/seen-user.js"></script>
-    <script src="bower_components/seen-bank/dist/seen-bank.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
     <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
     <script src="bower_components/seen-monitor/dist/seen-monitor.js"></script>
@@ -87,17 +89,11 @@
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/mblowfish-core/dist/mblowfish-core.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
-    <script src="bower_components/seen-supertenant/dist/seen-supertenant.js"></script>
     <script src="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.js"></script>
     <script src="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.js"></script>
     <script src="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.js"></script>
-    <script src="bower_components/angular-material-dashboard-bank/dist/angular-material-dashboard-bank.js"></script>
-    <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
     <script src="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.js"></script>
-    <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
     <script src="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.js"></script>
-    <script src="bower_components/angular-material-dashboard-wallet/dist/angular-material-dashboard-wallet.js"></script>
-    <script src="bower_components/seen-sdp/dist/seen-sdp.js"></script>
     <script src="bower_components/angular-material-dashboard-sdp/dist/angular-material-dashboard-sdp.js"></script>
     <!-- endbower -->
 	<!-- endbuild -->
@@ -105,6 +101,23 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<!-- injector:js -->
 	<script src="scripts/app.js"></script>
+	<script src="scripts/bank/app.js"></script>
+	<script src="scripts/bank/configs/states.js"></script>
+	<script src="scripts/bank/controllers/amd-wallet-charge.js"></script>
+	<script src="scripts/bank/controllers/bank-gate.js"></script>
+	<script src="scripts/bank/controllers/bank-gates-new.js"></script>
+	<script src="scripts/bank/controllers/bank-gates.js"></script>
+	<script src="scripts/bank/controllers/bank-receipt.js"></script>
+	<script src="scripts/bank/controllers/bank-reciepts.js"></script>
+	<script src="scripts/bank/controllers/bank-wallet-new.js"></script>
+	<script src="scripts/bank/controllers/bank-wallet-payment.js"></script>
+	<script src="scripts/bank/controllers/bank-wallet-payments.js"></script>
+	<script src="scripts/bank/controllers/bank-wallet-to-wallet.js"></script>
+	<script src="scripts/bank/controllers/bank-wallet-transfers.js"></script>
+	<script src="scripts/bank/controllers/bank-wallet.js"></script>
+	<script src="scripts/bank/controllers/bank-wallets.js"></script>
+	<script src="scripts/bank/controllers/banks.js"></script>
+	<script src="scripts/bank/runs/navigator.js"></script>
 	<script src="scripts/user/app.js"></script>
 	<script src="scripts/user/configs/icons.js"></script>
 	<script src="scripts/user/configs/states.js"></script>
