--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,6 @@
 	<link rel="stylesheet" href="bower_components/mblowfish-core/dist/mblowfish-core.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard/dist/angular-material-dashboard.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.css" />
-	<link rel="stylesheet" href="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.css" />
 	<link rel="stylesheet" href="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.css" />
@@ -58,6 +57,7 @@
     <script src="bower_components/seen-shop/dist/seen-shop.js"></script>
     <script src="bower_components/seen-seo/dist/seen-seo.js"></script>
     <script src="bower_components/seen-sdp/dist/seen-sdp.js"></script>
+    <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -66,7 +66,6 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
     <script src="bower_components/seen-tenant/dist/seen-tenant.js"></script>
-    <script src="bower_components/seen-cms/dist/seen-cms.js"></script>
     <script src="bower_components/seen-monitor/dist/seen-monitor.js"></script>
     <script src="bower_components/flux/dist/Flux.js"></script>
     <script src="bower_components/am-wb-core/dist/am-wb-core.js"></script>
@@ -90,7 +89,6 @@
     <script src="bower_components/mblowfish-core/dist/mblowfish-core.js"></script>
     <script src="bower_components/angular-material-dashboard/dist/angular-material-dashboard.js"></script>
     <script src="bower_components/angular-material-dashboard-tenant/dist/angular-material-dashboard-tenant.js"></script>
-    <script src="bower_components/angular-material-dashboard-cms/dist/angular-material-dashboard-cms.js"></script>
     <script src="bower_components/angular-material-dashboard-spa/dist/angular-material-dashboard-spa.js"></script>
     <script src="bower_components/angular-material-dashboard-seo/dist/angular-material-dashboard-seo.js"></script>
     <script src="bower_components/angular-material-dashboard-shop/dist/angular-material-dashboard-shop.js"></script>
@@ -118,6 +116,20 @@
 	<script src="scripts/bank/controllers/bank-wallets.js"></script>
 	<script src="scripts/bank/controllers/banks.js"></script>
 	<script src="scripts/bank/runs/navigator.js"></script>
+	<script src="scripts/cms/app.js"></script>
+	<script src="scripts/cms/configs/states.js"></script>
+	<script src="scripts/cms/controllers/content-new.js"></script>
+	<script src="scripts/cms/controllers/content.js"></script>
+	<script src="scripts/cms/controllers/contents.js"></script>
+	<script src="scripts/cms/controllers/term-taxonomies.js"></script>
+	<script src="scripts/cms/controllers/term-taxonomy-new.js"></script>
+	<script src="scripts/cms/controllers/term-taxonomy.js"></script>
+	<script src="scripts/cms/controllers/term.js"></script>
+	<script src="scripts/cms/controllers/terms.js"></script>
+	<script src="scripts/cms/directives/content-icon.js"></script>
+	<script src="scripts/cms/directives/content-preview.js"></script>
+	<script src="scripts/cms/runs/navigator.js"></script>
+	<script src="scripts/cms/runs/resources.js"></script>
 	<script src="scripts/user/app.js"></script>
 	<script src="scripts/user/configs/icons.js"></script>
 	<script src="scripts/user/configs/states.js"></script>
