--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,12 @@
 	<script src="scripts/cms/directives/content-preview.js"></script>
 	<script src="scripts/cms/runs/navigator.js"></script>
 	<script src="scripts/cms/runs/resources.js"></script>
+	<script src="scripts/collection/app.js"></script>
+	<script src="scripts/collection/configs/states.js"></script>
+	<script src="scripts/collection/controllers/collection-new.js"></script>
+	<script src="scripts/collection/controllers/collection.js"></script>
+	<script src="scripts/collection/controllers/collections.js"></script>
+	<script src="scripts/collection/controllers/document.js"></script>
 	<script src="scripts/user/app.js"></script>
 	<script src="scripts/user/configs/icons.js"></script>
 	<script src="scripts/user/configs/states.js"></script>
