--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,6 @@
 	md-theme-watch
 	dir="{{app.dir}}"
 	ng-app="myDashboardApp" 
-	ng-controller="MainCtrl"
 	manifest="<!-- injector:base-path --><!-- endinjector -->manifest.appcache">
 <head>
 	<title>Dashboard</title>
@@ -171,6 +170,7 @@
 	<script src="scripts/seo/runs/app.js"></script>
 	<script src="scripts/seo/services/seo-content.js"></script>
 	<script src="scripts/shop/app.js"></script>
+	<script src="scripts/shop/configs/icons.js"></script>
 	<script src="scripts/shop/configs/state.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-agency.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-category.js"></script>
