Addin shop board.

--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
 	<link rel="stylesheet" href="styles/fonts.css">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/preloader.css">
+	<link rel="stylesheet" href="styles/shop-orders-board.css">
 	<link rel="stylesheet" href="styles/test-preloader.css">
 	<!-- endinjector -->
 	<!-- endbuild -->
@@ -172,22 +173,23 @@
 	<script src="scripts/shop/app.js"></script>
 	<script src="scripts/shop/configs/icons.js"></script>
 	<script src="scripts/shop/configs/state.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-agencies.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-agency.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-categories.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-category.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-deliver.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-delivers.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-order.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-orders-board.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-orders.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-product.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-products.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-service.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-services.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-tag.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-tags.js"></script>
 	<script src="scripts/shop/controllers/amd-shop-zone.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-agencies.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-categories.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-delivers.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-orders.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-products.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-services.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-tags.js"></script>
-	<script src="scripts/shop/controllers/seen-shop-zones.js"></script>
+	<script src="scripts/shop/controllers/amd-shop-zones.js"></script>
 	<script src="scripts/shop/runs/actions-agency.js"></script>
 	<script src="scripts/shop/runs/actions-category.js"></script>
 	<script src="scripts/shop/runs/actions-deliver.js"></script>
