about: https://github.com/viraweb123/vw-dashboard/issues/2
it depends on : https://github.com/viraweb123/vw-dashboard/issues/3

--- a/app/index.html
+++ b/app/index.html
@@ -217,6 +217,7 @@
 	<script src="scripts/tenant/controllers/tickets.js"></script>
 	<script src="scripts/tenant/directives/amdTenantInvoice.js"></script>
 	<script src="scripts/tenant/filters/iran-currency.js"></script>
+	<script src="scripts/tenant/runs/actions.js"></script>
 	<script src="scripts/tenant/runs/navigator.js"></script>
 	<script src="scripts/tenant/runs/settings.js"></script>
 	<script src="scripts/user/app.js"></script>
