--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,24 @@
 	<script src="scripts/app.js"></script>
 	<script src="scripts/module-backup/index.js"></script>
 	<script src="scripts/module-backup/snapshots-view-ctrl.js"></script>
+	<script src="scripts/module-bank/controllers/amd-wallet-charge.js"></script>
+	<script src="scripts/module-bank/controllers/bank-gate.js"></script>
+	<script src="scripts/module-bank/controllers/bank-gates-new.js"></script>
+	<script src="scripts/module-bank/controllers/bank-gates.js"></script>
+	<script src="scripts/module-bank/controllers/bank-receipt.js"></script>
+	<script src="scripts/module-bank/controllers/bank-reciepts.js"></script>
+	<script src="scripts/module-bank/controllers/bank-wallet-new.js"></script>
+	<script src="scripts/module-bank/controllers/bank-wallet-payment.js"></script>
+	<script src="scripts/module-bank/controllers/bank-wallet-payments.js"></script>
+	<script src="scripts/module-bank/controllers/bank-wallet-to-wallet.js"></script>
+	<script src="scripts/module-bank/controllers/bank-wallet-transfers.js"></script>
+	<script src="scripts/module-bank/controllers/bank-wallet.js"></script>
+	<script src="scripts/module-bank/controllers/bank-wallets.js"></script>
+	<script src="scripts/module-bank/controllers/banks.js"></script>
+	<script src="scripts/module-bank/controllers/discount-new.js"></script>
+	<script src="scripts/module-bank/controllers/discount.js"></script>
+	<script src="scripts/module-bank/controllers/discounts.js"></script>
+	<script src="scripts/module-bank/index.js"></script>
 	<script src="scripts/module-cms/content-editor-ctrl.js"></script>
 	<script src="scripts/module-cms/content-icon-directive.js"></script>
 	<script src="scripts/module-cms/content-new-view-ctrl.js"></script>
