--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,24 @@
 	<script src="scripts/module-cms/term-taxonomy-editor-ctrl.js"></script>
 	<script src="scripts/module-cms/term-taxonomy-new-dialog-ctrl.js"></script>
 	<script src="scripts/module-cms/terms-view-ctrl.js"></script>
+	<script src="scripts/module-jms/index.js"></script>
+	<script src="scripts/module-jms/pipeline-editor-ctrl.js"></script>
+	<script src="scripts/module-jms/pipelines-view-ctrl.js"></script>
+	<script src="scripts/module-sdp/controllers/resource-categories-list.js"></script>
+	<script src="scripts/module-sdp/controllers/resource-category-list.js"></script>
+	<script src="scripts/module-sdp/controllers/resource-tag-list.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-asset-new.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-asset.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-assets.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-categories.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-category-new.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-category.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-downloaded-files-link.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-tag-new.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-tag.js"></script>
+	<script src="scripts/module-sdp/controllers/sdp-tags.js"></script>
+	<script src="scripts/module-sdp/index.js"></script>
+	<script src="scripts/module-sdp/sdp-downloaded-link-directive.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-agencies.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-agency.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-categories.js"></script>
