Seo module in transfered to the new version

--- a/app/index.html
+++ b/app/index.html
@@ -130,6 +130,18 @@
 	<script src="scripts/module-sdp/controllers/sdp-tags.js"></script>
 	<script src="scripts/module-sdp/index.js"></script>
 	<script src="scripts/module-sdp/sdp-downloaded-link-directive.js"></script>
+	<script src="scripts/module-seo/controllers/backend-new.js"></script>
+	<script src="scripts/module-seo/controllers/backend.js"></script>
+	<script src="scripts/module-seo/controllers/backends.js"></script>
+	<script src="scripts/module-seo/controllers/content-render.js"></script>
+	<script src="scripts/module-seo/controllers/crawled-links.js"></script>
+	<script src="scripts/module-seo/controllers/engine.js"></script>
+	<script src="scripts/module-seo/controllers/engines.js"></script>
+	<script src="scripts/module-seo/controllers/link-new.js"></script>
+	<script src="scripts/module-seo/controllers/link.js"></script>
+	<script src="scripts/module-seo/controllers/links.js"></script>
+	<script src="scripts/module-seo/index.js"></script>
+	<script src="scripts/module-seo/seo-content-service.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-agencies.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-agency.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-categories.js"></script>
