Spa is updated.

--- a/app/index.html
+++ b/app/index.html
@@ -160,6 +160,14 @@
 	<script src="scripts/module-shop/controllers/amd-shop-zone.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-zones.js"></script>
 	<script src="scripts/module-shop/index.js"></script>
+	<script src="scripts/module-spa/controllers/repository-spa.js"></script>
+	<script src="scripts/module-spa/controllers/repository-spas.js"></script>
+	<script src="scripts/module-spa/controllers/spa-editor-ctrl.js"></script>
+	<script src="scripts/module-spa/controllers/spa-upload.js"></script>
+	<script src="scripts/module-spa/controllers/spas-views-ctrl.js"></script>
+	<script src="scripts/module-spa/index.js"></script>
+	<script src="scripts/module-spa/market-spa-factory.js"></script>
+	<script src="scripts/module-spa/marketplace-service.js"></script>
 	<!-- endinjector -->
 	<!-- endbuild -->
 </head>
