tinant is updated

--- a/app/index.html
+++ b/app/index.html
@@ -168,6 +168,18 @@
 	<script src="scripts/module-spa/index.js"></script>
 	<script src="scripts/module-spa/market-spa-factory.js"></script>
 	<script src="scripts/module-spa/marketplace-service.js"></script>
+	<script src="scripts/module-tenant/amdTenantInvoice-directive.js"></script>
+	<script src="scripts/module-tenant/controllers/invoice.js"></script>
+	<script src="scripts/module-tenant/controllers/invoices.js"></script>
+	<script src="scripts/module-tenant/controllers/local-settings.js"></script>
+	<script src="scripts/module-tenant/controllers/receipt.js"></script>
+	<script src="scripts/module-tenant/controllers/setting-security.js"></script>
+	<script src="scripts/module-tenant/controllers/tenant.js"></script>
+	<script src="scripts/module-tenant/controllers/tenants.js"></script>
+	<script src="scripts/module-tenant/controllers/ticket.js"></script>
+	<script src="scripts/module-tenant/controllers/tickets.js"></script>
+	<script src="scripts/module-tenant/index.js"></script>
+	<script src="scripts/module-tenant/iran-currency-filter.js"></script>
 	<!-- endinjector -->
 	<!-- endbuild -->
 </head>
