user module is enabled

--- a/app/index.html
+++ b/app/index.html
@@ -180,6 +180,17 @@
 	<script src="scripts/module-tenant/controllers/tickets.js"></script>
 	<script src="scripts/module-tenant/index.js"></script>
 	<script src="scripts/module-tenant/iran-currency-filter.js"></script>
+	<script src="scripts/module-user/controllers/AmdUserGroupsCtrl.js"></script>
+	<script src="scripts/module-user/controllers/account.js"></script>
+	<script src="scripts/module-user/controllers/accounts.js"></script>
+	<script src="scripts/module-user/controllers/group-new.js"></script>
+	<script src="scripts/module-user/controllers/group.js"></script>
+	<script src="scripts/module-user/controllers/groups-of.js"></script>
+	<script src="scripts/module-user/controllers/role.js"></script>
+	<script src="scripts/module-user/controllers/roles-of.js"></script>
+	<script src="scripts/module-user/controllers/user-new.js"></script>
+	<script src="scripts/module-user/controllers/users-of.js"></script>
+	<script src="scripts/module-user/index.js"></script>
 	<!-- endinjector -->
 	<!-- endbuild -->
 </head>
