Shop category resource

--- a/app/index.html
+++ b/app/index.html
@@ -168,6 +168,7 @@
 	<script src="scripts/module-shop/actions/agency-update.js"></script>
 	<script src="scripts/module-shop/actions/category-delete.js"></script>
 	<script src="scripts/module-shop/actions/category-new.js"></script>
+	<script src="scripts/module-shop/actions/category-setparent.js"></script>
 	<script src="scripts/module-shop/actions/category-update.js"></script>
 	<script src="scripts/module-shop/actions/deliver-create.js"></script>
 	<script src="scripts/module-shop/actions/deliver-delete.js"></script>
@@ -184,6 +185,7 @@
 	<script src="scripts/module-shop/actions/zone-create.js"></script>
 	<script src="scripts/module-shop/actions/zone-delete.js"></script>
 	<script src="scripts/module-shop/actions/zone-update.js"></script>
+	<script src="scripts/module-shop/controllers/amd-shop-categories.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-order.js"></script>
 	<script src="scripts/module-shop/editors/amd-shop-agency.js"></script>
 	<script src="scripts/module-shop/editors/amd-shop-category.js"></script>
