Add an action to open content editor

--- a/app/index.html
+++ b/app/index.html
@@ -116,6 +116,8 @@
 	<script src="scripts/module-bank/controllers/discount-new.js"></script>
 	<script src="scripts/module-bank/controllers/discount.js"></script>
 	<script src="scripts/module-bank/controllers/discounts.js"></script>
+	<script src="scripts/module-cms/actions/contents-edit.js"></script>
+	<script src="scripts/module-cms/actions/contents-properties.js"></script>
 	<script src="scripts/module-cms/controllers/content-new-ctrl.js"></script>
 	<script src="scripts/module-cms/controllers/content-url-ctrl.js"></script>
 	<script src="scripts/module-cms/controllers/seen-cms-contents-ctrl.js"></script>
