--- a/app/index.html
+++ b/app/index.html
@@ -166,9 +166,16 @@
 	<script src="scripts/module-seo/controllers/link-new.js"></script>
 	<script src="scripts/module-seo/controllers/link.js"></script>
 	<script src="scripts/module-seo/controllers/links.js"></script>
+	<script src="scripts/module-seo/editors/backend-editor.js"></script>
 	<script src="scripts/module-seo/editors/render-linke-editor.js"></script>
+	<script src="scripts/module-seo/editors/sitemap-link-editor.js"></script>
 	<script src="scripts/module-seo/services/seo-content-service.js"></script>
+	<script src="scripts/module-seo/views/backends-new-view.js"></script>
+	<script src="scripts/module-seo/views/backends-view.js"></script>
 	<script src="scripts/module-seo/views/crawled-links-view.js"></script>
+	<script src="scripts/module-seo/views/links-new-view.js"></script>
+	<script src="scripts/module-seo/views/links-view.js"></script>
+	<script src="scripts/module-seo/views/sitemaps-view.js"></script>
 	<script src="scripts/module-shop/actions/agency-create.js"></script>
 	<script src="scripts/module-shop/actions/agency-delete.js"></script>
 	<script src="scripts/module-shop/actions/agency-update.js"></script>
