the yoyo problem of the project is fixed.

--- a/app/scripts/module-tenant/editors/tenant.html
+++ b/app/scripts/module-tenant/editors/tenant.html
@@ -1,7 +1,5 @@
-<md-content 
-	class="md-padding"
-	layout-padding
-	flex>
+<md-content
+	style="overflow: auto;">
 	<mb-titled-block 
 		mb-progress="ctrl.loading || ctrl.removing"
 		mb-title="{{'Tenant' | translate}}"
