add an action to create a gate.

--- a/app/index.html
+++ b/app/index.html
@@ -99,6 +99,7 @@
 	<script src="scripts/module-account/directives/account-actions-ctrl.js"></script>
 	<script src="scripts/module-account/factories/seen-authentication-provider.js"></script>
 	<script src="scripts/module-backup/snapshots-view-ctrl.js"></script>
+	<script src="scripts/module-bank/actions/gates-create.js"></script>
 	<script src="scripts/module-bank/actions/gates-delete.js"></script>
 	<script src="scripts/module-bank/actions/gates-edit.js"></script>
 	<script src="scripts/module-bank/actions/gates-update.js"></script>
